# daedalus

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE-BSL1.1  README.md  library-patches.json  package-lock.json  package.json  patch_library_patches.js  pnpm-lock.yaml
.github/workflows/: rust.yml
daedalus/: Cargo.toml  build.rs
daedalus/src/: lib.rs  minecraft.rs  modded.rs  version.rs
daedalus/tests/: version_comparison.rs
daedalus_client/: Cargo.toml  README.md  library-patches.json  lwjgl-config.json  monkeypatch_paths.js  patched-library-patches.json
daedalus_client/src/: fabric.rs  forge.rs  main.rs  minecraft.rs  neoforge.rs  neoforged.rs  quilt.rs
daedalus_client/src/common/: cas.rs  change_detection.rs  manifest_merge.rs  mod.rs
daedalus_client/src/forge/: archive.rs  libraries.rs  mod.rs  types.rs  version.rs
daedalus_client/src/infrastructure/: circuit_breaker.rs  error.rs  mod.rs
daedalus_client/src/loaders/: fabric.rs  mod.rs  quilt.rs
daedalus_client/src/minecraft/: helpers.rs  library_patches.rs  log4j.rs  lwjgl.rs  mod.rs  types.rs
daedalus_client/src/neoforge/: mod.rs  types.rs
daedalus_client/src/services/: betterstack.rs  cas.rs  cloudflare.rs  download.rs  mod.rs  upload.rs
daedalus_client/utils/: restore_split_natives.py
