[package]
name = "daedalus"
version = "0.1.21"
authors = ["Jai A <jaiagr+gpg@pm.me>"]
edition = "2021"
license = "MIT"
description = "Utilities for querying and parsing Minecraft metadata"
repository = "https://github.com/modrinth/daedalus/"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
keywords = ["minecraft", "launcher"]
categories = ["game-development", "api-bindings"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0", features = ["serde"] }
backon = "1"
bytes = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
sha1 = { version = "0.6.1", features = ["std"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"], optional = true }
once_cell = "1"
url = "2"
lenient_semver = "0"

[build-dependencies]
dotenvy = "0.15.6"
