[package]
name = "daedalus_client"
version = "0.1.21"
authors = ["Jai A <jaiagr+gpg@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["ansi", "env-filter"] }
daedalus = { path = "../daedalus" }
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"
dotenvy = "0.15.6"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
anyhow = "1.0"
reqwest = "0.11.13"
zip = "0.6.3"
semver = "1.0"
serde-xml-rs = "0.6.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.3.0"
rust-s3 = "0.33.0"
lenient_semver = "0.4.2"
walkdir = "2.3.3"
path-slash = "0.2.1"
sentry = "0.32.1"

[features]
default = ["sentry", "forge", "fabric", "quilt", "neoforge"]
sentry = []
forge = []
fabric = []
quilt = []
neoforge = []
