[package]
name = "daedalus_client"
version = "0.1.21"
authors = ["Jai A <jaiagr+gpg@pm.me>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["ansi", "env-filter", "json"] }
tracing-error = "0.2"
thiserror = "1"
daedalus = { path = "../daedalus" }
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"
dotenvy = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6"
anyhow = "1.0"
reqwest = { version = "0.11.13", default-features = false, features = [
    "json",
    "rustls-tls",
] }
zip = "0.6.3"
semver = "1.0"
backon = "1.2.0"
serde-xml-rs = "0.6.0"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.3.0"
rust-s3 = "0.33.0"
lenient_semver = "0.4.2"
sha2 = "0.10"
walkdir = "2.3.3"
path-slash = "0.2.1"
sentry = "0.32.1"

[features]
default = ["sentry", "forge", "fabric", "quilt", "neoforge"]
sentry = []
forge = []
fabric = []
quilt = []
neoforge = []
